<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ApplicationID">1XwyXTQlIQDuwcjETTTmvEaysvJVZLsSasuxibY3</string>
    <string name="ClientKey">hQIEN0MfhYKiBPCHsPZ6djei7myOjcRpX56Cd4Xc</string>
    
    <string name="debugInfo_text">DebugInfo: </string>



    <string name="app_name">GoldenCash</string>
    <string name="signin_textview">Welcome to GoldenCash Bank...</string>
    <string name="action_settings">Settings</string>
    <string name="Username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="signin_text">Log in</string>
    <string name="signup_text"><u>New To GoldenCash</u></string>
    <string name="open_account_text">OPEN ACCOUNT</string>
    <string name="firstname_text">First Name</string>
    <string name="lastname_text">Last Name</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="Debit_account">CHECKING</string>
    <string name="Checking">CHECKING</string>
    <string name="Saving">SAVING</string>
    <string name="Credit_Account">CREDIT</string>
    <string name="account_type">CHOOSE TO ACTIVATE ACCOUNT:</string>
    <string name="Choose_Account_From">Choose an account transfer from:</string>
    <string name="Choose_Account_To">Choose an account transfer to:</string>
    <string name="Transfer"><u>Transfer to Other User Account</u></string>
    <string name="ForgetPassword"><u>Forgot Password?</u></string>
    <string name="TeamInfo">Team GoldenCash CSE 110 FALL 2014 &#174;</string>

    <string name="ERROR_password"
        >The Username or Password you entered is incorrect.</string>
</resources>

