<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/icon"
   >

    <TextView
        android:text="@string/signin_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:layout_below="@id/textView"
        android:layout_marginTop="250dp"
        android:hint="@string/Username_text"  />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password_text"
        android:id="@+id/passwordField"
        android:layout_below="@id/usernameField"/>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordField"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/signin_text"
        android:textStyle="bold"/>

    <Button
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_button"
        android:id="@+id/signup_button"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:text="@string/signup_text"
        android:textColor="@color/RedWine"
        />

    <Button
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgetPassword"
        android:textColor="@color/RedWine"
        android:layout_alignParentRight="true"
        android:id="@+id/button_reset_password"
        android:layout_below="@+id/signin_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
