<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/icon2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="From:"
        android:id="@+id/textView2" />

    <Spinner
        android:prompt="@string/Choose_Account_From"
        android:spinnerMode="dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_transaction_from"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="To:"
        android:id="@+id/textView3" />

    <Spinner
        android:prompt="@string/Choose_Account_To"
        android:spinnerMode="dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_transaction_to"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:layout_marginTop="20dp"
        android:id="@+id/button_confirm_transaction"
        android:layout_gravity="center_horizontal" />
    <Button
        android:background="@android:color/transparent"
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Transfer"
        android:textColor="@color/RedWine"
        android:id="@+id/button_transfer_to_account"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>